<resources>
    <string name="app_name">XO Game</string>

    <string name="action_settings">Settings</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Info</string>
    <string name="human">You </string>
    <string name="android">Android </string>
    <string name="player1">Player 1 </string>
    <string name="player2">Player 2 </string>
    <string name="contact_heading">Contact Info</string>
    <string name="poweredBy"><u>Powered by Emir Veledar</u></string>
    <string name="contact_info_private_email">emir.veledar@edu.fit.ba</string>
    <string name="contact_info_phone_number">+387(61) 258 - 231</string>
    <string name="about_heading">About App</string>
    <string name="exitGameLabel">Exit Game</string>
    <string name="vsAndroid">Vs Android</string>
    <string name="vsPlayer">Vs Player</string>
    <string name="title_activity_xogame">XO Game</string>
    <string name="title_activity_about">O Aplikaciji</string>

    <string name="title_activity_xogame_vs_player">XOGameVsPlayer</string>






</resources>
