<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:layout_weight="2"
            android:id="@+id/playArea">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:id="@+id/one"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:id="@+id/two"
                    android:textSize="60sp"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:id="@+id/three"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    android:id="@+id/four"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:id="@+id/five"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/six"
                    android:id="@+id/six"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:id="@+id/seven"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eight"
                    android:id="@+id/eight"
                    android:textSize="60sp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nine"
                    android:id="@+id/nine"
                    android:textSize="60sp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                >



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/human"
                        android:id="@+id/human"
                        android:layout_marginRight="30dp"
                        android:textSize="25sp"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/one"
                        android:id="@+id/humanCount"
                        android:textSize="25sp"
                        android:textColor="@android:color/white"
                        android:layout_marginRight="30dp"/>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/one"
                        android:id="@+id/androidCount"
                        android:layout_marginRight="30dp"
                        android:textSize="25sp"
                        android:textColor="@android:color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/android"
                    android:id="@+id/android"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"
                    />


            </LinearLayout>

        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>