<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="25dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/xo_icon" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vsAndroid"
                android:id="@+id/newGameButtonVsAndroid"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vsPlayer"
                android:id="@+id/newGameButtonVsPlayer"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_heading"
                android:id="@+id/aboutAppButton"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exitGameLabel"
                android:id="@+id/exitGameButton"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

</LinearLayout>