<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  For each sharing view, set attribute transitionName TO  -->

    <android.support.v7.widget.Toolbar
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eb262626"
        android:titleTextColor="#fff"
        android:id="@+id/toolbar"
        />

    <ImageView
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/xo_icon"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
           />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dev Name:"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/details_city_label"
                android:text="Emir Veledar"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/details_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#9f9f9f"
                android:text="Phone:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/details_phone_label"
                android:text="@string/contact_info_phone_number"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/details_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="#9f9f9f"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/details_email_label"
                android:text="@string/contact_info_private_email"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>